--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" type="image/svg" href="/src/assets/images/logos/logok.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
     />
     <title>
-      Flexy Free VueJs Admin Template by WrapPixel
+      Managemen Pemanfaatan Data
     </title>
   </head>
   <body>
